--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
-version: '3.8'
+version: "3.8"
 services:
   postgres:
     image: postgres
     container_name: postgres-db
     environment:
-      POSTGRES_USER: garin 
-      POSTGRES_PASSWORD: 123 
+      POSTGRES_USER: garin
+      POSTGRES_PASSWORD: 123
       POSTGRES_DB: postgres
     volumes:
       - ~/docker-volumes/postgres-data:/var/lib/postgresql/data
